fixes technology meta alignment

--- a/assets/styles/mixins/gutenbergBlocks/image.css
+++ b/assets/styles/mixins/gutenbergBlocks/image.css
@@ -46,6 +46,10 @@
     figcaption {
       @include figcaption;
     }
+
+    figcaption:empty {
+      display: none;
+    }
   }
 
   /* Alignment set: <div class="wp-block-image"> wrapper around <figure class="align{left|right}"> */
